--- a/index.html
+++ b/index.html
@@ -1,105 +1,114 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Connect Test</title>
-<style>
-  body{font-family:system-ui,Arial;margin:0;min-height:100vh;display:grid;place-items:center;background:#0b1220;color:#e6edf3}
-  .card{width:min(520px,92vw);background:#121a2a;border:1px solid #22304a;border-radius:14px;padding:18px}
-  button{width:100%;padding:12px;border:0;border-radius:10px;background:#6c8cff;color:#0b1220;font-weight:700}
-  pre{white-space:pre-wrap;background:#0f1625;border:1px solid #22304a;border-radius:10px;padding:10px;margin-top:12px}
-</style>
-<!-- ethers + fallback -->
-<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js" defer></script>
-<script>
-(function ensureEthers(){
-  setTimeout(function(){
-    if(typeof window.ethers==='undefined'){
-      var s=document.createElement('script');
-      s.src='https://unpkg.com/ethers@5.7.2/dist/ethers.umd.min.js';
-      s.defer=true;document.head.appendChild(s);
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>OFT Bridge v2</title>
+  <meta name="theme-color" content="#0b1220" />
+  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
+  <style>
+    body {
+      margin: 0; min-height: 100vh; display: grid; place-items: center;
+      background: #0b1220; color: #e6edf3; font-family: system-ui, Arial, sans-serif;
     }
-  },500);
-})();
-</script>
-<!-- web3modal + walletconnect (fallback) -->
-<script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js" defer></script>
-<script src="https://unpkg.com/web3modal@1.9.8/dist/index.js" defer></script>
+    .card {
+      background: #121a2a; border: 1px solid #22304a; border-radius: 12px;
+      padding: 28px; width: min(420px, 90vw); text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,.3);
+    }
+    h1 { margin-top: 0; color: #7c5cff; }
+    button {
+      width: 100%; padding: 12px; border: 0; border-radius: 10px;
+      font-weight: 700; color: #fff; cursor: pointer; margin-top: 10px;
+      font-size: 15px; transition: .2s;
+    }
+    #connect { background: linear-gradient(90deg,#6ee7ff,#7c5cff); }
+    #bridge { background: linear-gradient(90deg,#22c55e,#16a34a); }
+    input {
+      width: 100%; padding: 12px; margin-top: 10px; border-radius: 10px;
+      border: 1px solid #22304a; background: #0f1625; color: #fff; font-size: 14px;
+    }
+    pre {
+      white-space: pre-wrap; background: #0f1625; border: 1px solid #22304a;
+      border-radius: 10px; padding: 10px; margin-top: 14px; text-align: left;
+      font-size: 13px;
+    }
+  </style>
 </head>
 <body>
   <div class="card">
-    <h2>🔌 Wallet Connect Test</h2>
-    <p>Buka halaman ini di <b>MetaMask/OKX/Trust Browser</b>, lalu tekan Connect.</p>
-    <button id="btnConnect">Connect</button>
-    <pre id="log">log siap…</pre>
+    <h1>🌉 OFT Mini Bridge v2</h1>
+    <p>Bridge token antar chain dengan MetaMask / OKX / Trust</p>
+    <button id="connect">🔌 Connect Wallet</button>
+    <input id="amount" type="number" placeholder="Jumlah token (LD, ex: 1000000)" />
+    <button id="bridge" disabled>🚀 Bridge Now</button>
+    <pre id="log">log siap...</pre>
   </div>
 
-<script>
-let provider, signer, web3Modal, wcProvider;
-const log = (m)=>{const el=document.getElementById('log'); el.textContent+=(el.textContent?'\\n':'')+m;};
+  <script>
+    let provider, signer;
 
-function initWeb3Modal(){
-  if (web3Modal) return;
-  const providerOptions = {
-    walletconnect: {
-      package: window.WalletConnectProvider?.default,
-      options: { rpc: { 1:"https://rpc.ankr.com/eth" } } // tidak dipakai utk Sepolia, cuma supaya init OK
-    }
-  };
-  web3Modal = new window.Web3Modal.default({ cacheProvider:false, providerOptions });
-}
+    const log = (m) => {
+      const el = document.getElementById("log");
+      el.textContent += (el.textContent ? "\n" : "") + m;
+      el.scrollTop = el.scrollHeight;
+      console.log(m);
+    };
 
-async function waitForLibs(){
-  const start = Date.now();
-  while (!window.ethers || !window.Web3Modal || !window.WalletConnectProvider){
-    if (Date.now()-start>6000) throw new Error("Libs belum termuat (ethers/web3modal)");
-    await new Promise(r=>setTimeout(r,120));
-  }
-}
-
-async function connectUniversal(){
-  try{
-    await waitForLibs();
-    // 1) injected provider dulu (MetaMask/OKX/Trust/CBW)
-    let ext = null;
-    if (window.ethereum) ext = window.ethereum;
-    else if (window.okxwallet?.ethereum) ext = window.okxwallet.ethereum;
-    else if (window.coinbaseWalletExtension) ext = window.coinbaseWalletExtension;
-
-    if (ext){
-      provider = new ethers.providers.Web3Provider(ext,'any');
-      await provider.send('eth_requestAccounts',[]);
-      signer = provider.getSigner();
-      const me = await signer.getAddress();
-      const net = await provider.getNetwork();
-      log(`✅ Injected connected: ${me}`);
-      log(`chainId: ${net.chainId}`);
-      return;
+    async function connect() {
+      const btn = document.getElementById("connect");
+      try {
+        if (!window.ethereum) throw new Error("Buka di browser MetaMask/OKX/Trust/CB Wallet.");
+        btn.disabled = true; btn.textContent = "⏳ Connecting...";
+        provider = new ethers.providers.Web3Provider(window.ethereum, "any");
+        await provider.send("eth_requestAccounts", []);
+        signer = provider.getSigner();
+        const me = await signer.getAddress();
+        const net = await provider.getNetwork();
+        log(`✅ Connected: ${me}\nchainId: ${net.chainId}`);
+        btn.textContent = "✅ Connected";
+        document.getElementById("bridge").disabled = false;
+      } catch (e) {
+        log("❌ Connect error: " + (e.message || e));
+        btn.disabled = false; btn.textContent = "🔌 Connect Wallet";
+      }
     }
 
-    // 2) fallback: Web3Modal (WalletConnect)
-    initWeb3Modal();
-    const wc = await web3Modal.connect();
-    wcProvider = wc;
-    provider = new ethers.providers.Web3Provider(wc,'any');
-    signer = provider.getSigner();
-    const me = await signer.getAddress();
-    const net = await provider.getNetwork();
-    log(`✅ WalletConnect connected: ${me}`);
-    log(`chainId: ${net.chainId}`);
+    async function bridgeNow() {
+      const amountInput = document.getElementById("amount").value.trim();
+      if (!amountInput) return log("⚠️ Isi jumlah token dulu.");
 
-    if (wc.on){
-      wc.on('disconnect',()=>log('🔌 disconnected'));
-      wc.on('accountsChanged',a=>log('accountsChanged: '+a));
-      wc.on('chainChanged',c=>log('chainChanged: '+c));
+      try {
+        if (!signer) return log("❌ Hubungkan wallet dulu.");
+        const me = await signer.getAddress();
+        const adapter = "0xc099cD946d5efCC35A99D64E808c1430cEf08126";
+        const token = "0xc4DCC311c028e341fd8602D8eB89c5de94625927";
+        const dstEid = 40374;
+        const amount = ethers.BigNumber.from(amountInput);
+        const OFT_ABI = [
+          "function quoteSend((uint32,bytes32,uint256,uint256,bytes,bytes,bytes),bool)view returns(uint256 nativeFee,uint256 zroFee)",
+          "function send((uint32,bytes32,uint256,uint256,bytes,bytes,bytes),(uint256,uint256),address)payable"
+        ];
+
+        const to32 = "0x" + me.slice(2).padStart(64, "0");
+        const oft = new ethers.Contract(adapter, OFT_ABI, signer);
+        const sendParam = {
+          dstEid, to: to32, amountLD: amount, minAmountLD: amount,
+          extraOptions: "0x", composeMsg: "0x", oftCmd: "0x"
+        };
+        const fee = await oft.quoteSend(sendParam, false);
+        log(`💰 Fee: ${ethers.utils.formatEther(fee.nativeFee)} ETH`);
+        const tx = await oft.send(sendParam, { nativeFee: fee.nativeFee, zroFee: 0 }, me, { value: fee.nativeFee });
+        log(`🚀 TX sent: ${tx.hash}`);
+        await tx.wait();
+        log("✅ Bridge confirmed!");
+      } catch (e) {
+        log("❌ Bridge error: " + (e.message || e));
+      }
     }
-  }catch(e){
-    log('❌ Connect error: '+(e.message||e));
-  }
-}
 
-document.getElementById('btnConnect').onclick = connectUniversal;
-</script>
+    document.getElementById("connect").onclick = connect;
+    document.getElementById("bridge").onclick = bridgeNow;
+  </script>
 </body>
 </html>
